# mf-update

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
lib/: gspreadsheet.py
mfupdate/: __main__.py  data.py  fetcher.py
