[tool.poetry]
name = "mf-update"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.1"
requests = "^2.31.0"
gspread = "^5.4.0"
oauth2client = "^4.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"
black = "^23.7.0"
pylint = "^2.17.5"

[tool.black]
line-length = 120
fix = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
